--- a/index.html
+++ b/index.html
@@ -362,11 +362,11 @@
     </div>
 
     <script type="module">
-        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.159.0/build/three.module.js';
-        import { EffectComposer } from 'https://cdn.jsdelivr.net/npm/three@0.159.0/examples/jsm/postprocessing/EffectComposer.js';
-        import { RenderPass } from 'https://cdn.jsdelivr.net/npm/three@0.159.0/examples/jsm/postprocessing/RenderPass.js';
-        import { ShaderPass } from 'https://cdn.jsdelivr.net/npm/three@0.159.0/examples/jsm/postprocessing/ShaderPass.js';
-        import { OutlinePass } from 'https://cdn.jsdelivr.net/npm/three@0.159.0/examples/jsm/postprocessing/OutlinePass.js';
+        import * as THREE from 'https://unpkg.com/three@0.159.0/build/three.module.js';
+        import { EffectComposer } from 'https://unpkg.com/three@0.159.0/examples/jsm/postprocessing/EffectComposer.js';
+        import { RenderPass } from 'https://unpkg.com/three@0.159.0/examples/jsm/postprocessing/RenderPass.js';
+        import { ShaderPass } from 'https://unpkg.com/three@0.159.0/examples/jsm/postprocessing/ShaderPass.js';
+        import { OutlinePass } from 'https://unpkg.com/three@0.159.0/examples/jsm/postprocessing/OutlinePass.js';
 
 
         // --- CONSTANTS ---
